<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:background="#FF000000">
    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"
        android:background="#FF111111" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="48dp"
        android:background="@color/white" android:orientation="horizontal" android:gravity="center">
        <TextView android:layout_width="0dp" android:layout_height="match_parent"
            android:layout_weight="1" android:gravity="center" android:text="@string/screenshot"
            android:textColor="@color/primary" />
        <TextView android:layout_width="0dp" android:layout_height="match_parent"
            android:layout_weight="1" android:gravity="center" android:text="@string/record"
            android:textColor="@color/red" />
        <TextView android:layout_width="0dp" android:layout_height="match_parent"
            android:layout_weight="1" android:gravity="center" android:text="@string/talkback"
            android:textColor="@color/primary" />
    </LinearLayout>
</LinearLayout>